--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Countdown to CST</title>
   <link rel="stylesheet" href="style.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1037559166249486" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
   <div class="container">
@@ -23,4 +26,5 @@
 
   <script src="countdown.js"></script>
 </body>
+
 </html>
